ERR
  Cell In[5], line 209
    Cell 2 — write the loader wrapper that falls back to Python if compiled C++ missing
           ^
SyntaxError: invalid character '—' (U+2014)
